# ducklake

./: .gitignore  Makefile  a.py  change_db.py  extension_config.cmake
src/: CMakeLists.txt  ducklake_catalog.cpp  ducklake_catalog_set.cpp  ducklake_delete.cpp  ducklake_extension.cpp  ducklake_initializer.cpp  ducklake_insert.cpp  ducklake_multi_file_list.cpp  ducklake_multi_file_reader.cpp  ducklake_scan.cpp  ducklake_schema_entry.cpp  ducklake_storage.cpp  ducklake_table_entry.cpp  ducklake_transaction.cpp  ducklake_transaction_manager.cpp  ducklake_types.cpp  ducklake_util.cpp
src/common/: CMakeLists.txt  ducklake_data_file.cpp  ducklake_name_map.cpp  ducklake_types.cpp  ducklake_util.cpp
src/functions/: CMakeLists.txt  base_metadata_function.cpp  ducklake_add_data_files.cpp  ducklake_cleanup_files.cpp  ducklake_cleanup_old_files.cpp  ducklake_compaction_functions.cpp  ducklake_current_snapshot.cpp  ducklake_expire_snapshots.cpp  ducklake_flush_inlined_data.cpp  ducklake_get_option.cpp  ducklake_last_committed_snapshot.cpp  ducklake_last_snapshot.cpp  ducklake_list_files.cpp  ducklake_merge_adjacent_files.cpp  ducklake_options.cpp  ducklake_rewrite_files.cpp  ducklake_set_commit_message.cpp  ducklake_set_option.cpp  ducklake_snapshots.cpp  ducklake_table_changes.cpp  ducklake_table_info.cpp  ducklake_table_insertions.cpp
src/include/: ducklake_catalog.hpp  ducklake_catalog_set.hpp  ducklake_data_file.hpp  ducklake_extension.hpp  ducklake_initializer.hpp  ducklake_insert.hpp  ducklake_multi_file_list.hpp  ducklake_multi_file_reader.hpp  ducklake_scan.hpp  ducklake_schema_entry.hpp  ducklake_snapshot.hpp  ducklake_storage.hpp  ducklake_table_entry.hpp  ducklake_transaction.hpp  ducklake_transaction_manager.hpp  ducklake_util.hpp
src/include/common/: enum.hpp  (+9 more)
src/metadata_manager/: CMakeLists.txt  postgres_metadata_manager.cpp
src/storage/: CMakeLists.txt  ducklake_autoload_helper.cpp  ducklake_catalog.cpp  ducklake_catalog_set.cpp  ducklake_checkpoint.cpp  ducklake_default_functions.cpp  ducklake_delete.cpp  ducklake_delete_filter.cpp  ducklake_field_data.cpp  ducklake_initializer.cpp  ducklake_inline_data.cpp  ducklake_inlined_data_reader.cpp  ducklake_insert.cpp  ducklake_merge_into.cpp  ducklake_metadata_manager.cpp  ducklake_multi_file_list.cpp  ducklake_multi_file_reader.cpp  ducklake_scan.cpp  ducklake_schema_entry.cpp  ducklake_secret.cpp  ducklake_stats.cpp  ducklake_storage.cpp  ducklake_table_entry.cpp  ducklake_transaction.cpp  ducklake_transaction_changes.cpp  ducklake_transaction_manager.cpp  ducklake_update.cpp  ducklake_view_entry.cpp
(+334 files in other folders)
